--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -127,8 +127,42 @@
                             <constraint firstItem="w97-0L-tYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k4L-DU-nRw"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="hrF-zD-mS3"/>
+                    <navigationItem key="navigationItem" id="hrF-zD-mS3">
+                        <barButtonItem key="rightBarButtonItem" id="j73-9w-dt1">
+                            <view key="customView" contentMode="scaleToFill" id="c9f-9b-EBa" customClass="SwitchControl" customModule="QueUp" customModuleProvider="target">
+                                <rect key="frame" x="323" y="6.6666666666666679" width="51" height="31.000000000000004"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.min.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pLA-Dy-Oki">
+                                        <rect key="frame" x="22" y="2.9999999999999982" width="27" height="25.333333333333336"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="27" id="Olm-fq-VeH"/>
+                                            <constraint firstAttribute="width" constant="27" id="byd-jq-6oB"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="15.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemFillColor"/>
+                                <constraints>
+                                    <constraint firstItem="pLA-Dy-Oki" firstAttribute="centerX" secondItem="c9f-9b-EBa" secondAttribute="centerX" constant="10" id="7S8-dc-bg4"/>
+                                    <constraint firstItem="pLA-Dy-Oki" firstAttribute="centerY" secondItem="c9f-9b-EBa" secondAttribute="centerY" id="QeE-wV-F5W"/>
+                                    <constraint firstAttribute="height" constant="31" id="n5d-Do-dzK"/>
+                                    <constraint firstAttribute="width" constant="51" id="owx-5h-nwo"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="centerXConstraint" destination="7S8-dc-bg4" id="uaD-lh-vRL"/>
+                                    <outlet property="thumbImageView" destination="pLA-Dy-Oki" id="bxt-gP-e6C"/>
+                                </connections>
+                            </view>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="appearanceSwitch" destination="c9f-9b-EBa" id="onC-9x-aLO"/>
                         <outlet property="formView" destination="TlU-X9-dM2" id="SYW-Qz-WeZ"/>
                         <segue destination="KqR-Jk-JGJ" kind="show" identifier="PlaylistViewController" id="Cx7-p1-aTU"/>
                     </connections>
@@ -717,6 +751,7 @@
         <image name="play.circle" catalog="system" width="128" height="121"/>
         <image name="plus.circle" catalog="system" width="128" height="121"/>
         <image name="spotify.icon.green" width="20" height="20"/>
+        <image name="sun.min.fill" catalog="system" width="128" height="121"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
@@ -728,6 +763,9 @@
         </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemFillColor">
+            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
