--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -20,19 +20,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="w97-0L-tYk">
-                                <rect key="frame" x="82.666666666666686" y="136" width="225" height="559"/>
+                                <rect key="frame" x="82.666666666666686" y="88" width="225" height="517"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGW-HU-3hp">
-                                        <rect key="frame" x="0.0" y="0.0" width="225" height="267"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="225" height="225"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QueUp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFi-bF-uyy">
-                                                <rect key="frame" x="0.0" y="201.66666666666669" width="225" height="65.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="178.33333333333331" width="225" height="46.666666666666657"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="34"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app.icon" translatesAutoresizingMaskIntoConstraints="NO" id="qXq-iX-XAH">
-                                                <rect key="frame" x="52.333333333333329" y="73.666666666666657" width="119.99999999999999" height="120"/>
+                                                <rect key="frame" x="52.333333333333329" y="50.333333333333343" width="119.99999999999999" height="120"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="120" id="7bl-Cb-pPn"/>
                                                     <constraint firstAttribute="width" secondItem="qXq-iX-XAH" secondAttribute="height" multiplier="1:1" id="nEC-y5-aGq"/>
@@ -41,16 +41,16 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="qXq-iX-XAH" firstAttribute="centerY" secondItem="oGW-HU-3hp" secondAttribute="centerY" id="16S-ft-3r4"/>
                                             <constraint firstItem="DFi-bF-uyy" firstAttribute="top" secondItem="qXq-iX-XAH" secondAttribute="bottom" constant="8" symbolic="YES" id="4fH-s4-H68"/>
                                             <constraint firstAttribute="bottom" secondItem="DFi-bF-uyy" secondAttribute="bottom" id="GWM-0B-tI9"/>
                                             <constraint firstItem="DFi-bF-uyy" firstAttribute="leading" secondItem="oGW-HU-3hp" secondAttribute="leading" id="Y60-tq-Nn7"/>
                                             <constraint firstItem="qXq-iX-XAH" firstAttribute="centerX" secondItem="oGW-HU-3hp" secondAttribute="centerX" id="Zhn-si-RNc"/>
                                             <constraint firstAttribute="trailing" secondItem="DFi-bF-uyy" secondAttribute="trailing" id="bfB-t2-wHn"/>
+                                            <constraint firstAttribute="width" secondItem="oGW-HU-3hp" secondAttribute="height" multiplier="1:1" id="ylD-8J-GUl"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TlU-X9-dM2" customClass="HomeFormView" customModule="QueUp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="287" width="225" height="272"/>
+                                        <rect key="frame" x="0.0" y="245" width="225" height="272"/>
                                         <subviews>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V5W-BY-HVe" customClass="HomeFormSegmentedControl" customModule="QueUp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="225" height="49"/>
@@ -124,7 +124,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="w97-0L-tYk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="6KU-Bk-pcS"/>
+                            <constraint firstItem="w97-0L-tYk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6KU-Bk-pcS"/>
                             <constraint firstItem="w97-0L-tYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k4L-DU-nRw"/>
                         </constraints>
                         <connections>
