--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -119,12 +119,24 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bg-P3-e0J">
+                                <rect key="frame" x="143.66666666666666" y="766" width="103" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Privacy Policy"/>
+                                <connections>
+                                    <action selector="addSongButtonPressed:" destination="KqR-Jk-JGJ" eventType="touchUpInside" id="TQk-jt-s8f"/>
+                                    <action selector="privacyButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wQJ-Sv-oCE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="w97-0L-tYk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6KU-Bk-pcS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9bg-P3-e0J" secondAttribute="bottom" constant="8" id="7b7-JX-8Wq"/>
+                            <constraint firstItem="9bg-P3-e0J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uxz-tg-fL3"/>
                             <constraint firstItem="w97-0L-tYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k4L-DU-nRw"/>
                         </constraints>
                         <connections>
@@ -171,6 +183,7 @@
                         <outlet property="headerView" destination="oGW-HU-3hp" id="uWp-ll-KfE"/>
                         <outlet property="headerViewTopConstraint" destination="6KU-Bk-pcS" id="QWM-rv-QWk"/>
                         <segue destination="KqR-Jk-JGJ" kind="show" identifier="PlaylistViewController" id="Cx7-p1-aTU"/>
+                        <segue destination="baF-fC-YCb" kind="presentation" identifier="PolicyViewController" id="ryo-v2-D9D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -753,6 +766,36 @@
             </objects>
             <point key="canvasLocation" x="2783.0769230769229" y="91.706161137440759"/>
         </scene>
+        <!--Policy View Controller-->
+        <scene sceneID="c2g-T8-ecT">
+            <objects>
+                <viewController id="baF-fC-YCb" customClass="PolicyViewController" customModule="QueUp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hs8-br-0F1">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GhC-Rf-sAN">
+                                <rect key="frame" x="356" y="64" width="18" height="22"/>
+                                <color key="tintColor" red="0.50980395079999996" green="0.50980395079999996" blue="0.50980395079999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="xmark" catalog="system"/>
+                                <connections>
+                                    <action selector="closeWebViewButtonPressed:" destination="baF-fC-YCb" eventType="touchUpInside" id="wCd-ap-nfy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gMn-pC-zVS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GhC-Rf-sAN" firstAttribute="top" secondItem="gMn-pC-zVS" secondAttribute="top" constant="20" id="4k1-t5-1r4"/>
+                            <constraint firstItem="gMn-pC-zVS" firstAttribute="trailing" secondItem="GhC-Rf-sAN" secondAttribute="trailing" constant="16" id="cBV-wO-TOm"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jfP-K2-kuS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1251" y="-579"/>
+        </scene>
     </scenes>
     <resources>
         <image name="a.circle.fill" catalog="system" width="128" height="121"/>
@@ -763,6 +806,7 @@
         <image name="plus.circle" catalog="system" width="128" height="121"/>
         <image name="spotify.icon.green" width="20" height="20"/>
         <image name="sun.min.fill" catalog="system" width="128" height="121"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
