--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -20,13 +20,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="58" translatesAutoresizingMaskIntoConstraints="NO" id="w97-0L-tYk">
-                                <rect key="frame" x="101.66666666666669" y="88" width="225" height="555"/>
+                                <rect key="frame" x="101.66666666666669" y="160.66666666666663" width="225" height="555"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGW-HU-3hp">
                                         <rect key="frame" x="0.0" y="0.0" width="225" height="225"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QueUp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFi-bF-uyy">
-                                                <rect key="frame" x="0.0" y="178.33333333333331" width="225" height="46.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="178.33333333333334" width="225" height="46.666666666666657"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="34"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -74,7 +74,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ROOM ID" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="tDT-fS-9Cv" customClass="HomeFormTextField" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="112" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="111.99999999999994" width="225" height="48"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                 <connections>
@@ -82,7 +82,7 @@
                                                 </connections>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7AK-5A-rhZ" customClass="HomeFormButton" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="168" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="167.99999999999994" width="225" height="48"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -94,7 +94,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKL-hW-4sK" customClass="HomeFormButton" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="224" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="223.99999999999994" width="225" height="48"/>
                                                 <color key="backgroundColor" systemColor="tintColor"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -134,8 +134,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="w97-0L-tYk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6KU-Bk-pcS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9bg-P3-e0J" secondAttribute="bottom" constant="8" id="7b7-JX-8Wq"/>
+                            <constraint firstItem="w97-0L-tYk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-25" id="TDm-9q-8FH"/>
                             <constraint firstItem="9bg-P3-e0J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uxz-tg-fL3"/>
                             <constraint firstItem="w97-0L-tYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k4L-DU-nRw"/>
                         </constraints>
@@ -181,7 +181,7 @@
                         <outlet property="appearanceSwitch" destination="c9f-9b-EBa" id="onC-9x-aLO"/>
                         <outlet property="formView" destination="TlU-X9-dM2" id="SYW-Qz-WeZ"/>
                         <outlet property="headerView" destination="oGW-HU-3hp" id="uWp-ll-KfE"/>
-                        <outlet property="headerViewTopConstraint" destination="6KU-Bk-pcS" id="QWM-rv-QWk"/>
+                        <outlet property="stackViewCenterConstraint" destination="TDm-9q-8FH" id="9D2-sB-CPe"/>
                         <segue destination="KqR-Jk-JGJ" kind="show" identifier="PlaylistViewController" id="Cx7-p1-aTU"/>
                         <segue destination="baF-fC-YCb" kind="presentation" identifier="PolicyViewController" id="ryo-v2-D9D"/>
                     </connections>
