--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -19,18 +19,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="58" translatesAutoresizingMaskIntoConstraints="NO" id="w97-0L-tYk">
-                                <rect key="frame" x="101.66666666666669" y="160.66666666666663" width="225" height="555"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="w97-0L-tYk">
+                                <rect key="frame" x="101.66666666666669" y="183" width="225" height="555"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGW-HU-3hp">
-                                        <rect key="frame" x="0.0" y="0.0" width="225" height="225"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="225" height="283"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QueUp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFi-bF-uyy">
-                                                <rect key="frame" x="0.0" y="178.33333333333334" width="225" height="46.666666666666657"/>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="34"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app.icon" translatesAutoresizingMaskIntoConstraints="NO" id="qXq-iX-XAH">
                                                 <rect key="frame" x="52.333333333333329" y="50.333333333333343" width="119.99999999999999" height="120"/>
                                                 <constraints>
@@ -38,15 +32,21 @@
                                                     <constraint firstAttribute="width" secondItem="qXq-iX-XAH" secondAttribute="height" multiplier="1:1" id="nEC-y5-aGq"/>
                                                 </constraints>
                                             </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QueUp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFi-bF-uyy">
+                                                <rect key="frame" x="53.333333333333329" y="178.33333333333331" width="117.99999999999999" height="46.666666666666657"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="34"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="DFi-bF-uyy" firstAttribute="top" secondItem="qXq-iX-XAH" secondAttribute="bottom" constant="8" symbolic="YES" id="4fH-s4-H68"/>
-                                            <constraint firstAttribute="bottom" secondItem="DFi-bF-uyy" secondAttribute="bottom" id="GWM-0B-tI9"/>
-                                            <constraint firstItem="DFi-bF-uyy" firstAttribute="leading" secondItem="oGW-HU-3hp" secondAttribute="leading" id="Y60-tq-Nn7"/>
+                                            <constraint firstAttribute="width" constant="225" id="K4h-pu-MJ1"/>
+                                            <constraint firstItem="DFi-bF-uyy" firstAttribute="centerX" secondItem="oGW-HU-3hp" secondAttribute="centerX" id="OKg-Kk-adk"/>
+                                            <constraint firstItem="qXq-iX-XAH" firstAttribute="top" secondItem="oGW-HU-3hp" secondAttribute="top" constant="50.329999999999998" id="Q1A-Xi-h45"/>
                                             <constraint firstItem="qXq-iX-XAH" firstAttribute="centerX" secondItem="oGW-HU-3hp" secondAttribute="centerX" id="Zhn-si-RNc"/>
-                                            <constraint firstAttribute="trailing" secondItem="DFi-bF-uyy" secondAttribute="trailing" id="bfB-t2-wHn"/>
-                                            <constraint firstAttribute="width" secondItem="oGW-HU-3hp" secondAttribute="height" multiplier="1:1" id="ylD-8J-GUl"/>
+                                            <constraint firstAttribute="height" constant="283" id="iRS-pU-DdN"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TlU-X9-dM2" customClass="HomeFormView" customModule="QueUp" customModuleProvider="target">
@@ -74,7 +74,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ROOM ID" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="tDT-fS-9Cv" customClass="HomeFormTextField" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="111.99999999999994" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="112" width="225" height="48"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                 <connections>
@@ -82,7 +82,7 @@
                                                 </connections>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7AK-5A-rhZ" customClass="HomeFormButton" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="167.99999999999994" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="168" width="225" height="48"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -94,7 +94,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKL-hW-4sK" customClass="HomeFormButton" customModule="QueUp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="223.99999999999994" width="225" height="48"/>
+                                                <rect key="frame" x="0.0" y="224" width="225" height="48"/>
                                                 <color key="backgroundColor" systemColor="tintColor"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -134,8 +134,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="V5W-BY-HVe" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="1KQ-9L-wUd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9bg-P3-e0J" secondAttribute="bottom" constant="8" id="7b7-JX-8Wq"/>
-                            <constraint firstItem="w97-0L-tYk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-25" id="TDm-9q-8FH"/>
                             <constraint firstItem="9bg-P3-e0J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uxz-tg-fL3"/>
                             <constraint firstItem="w97-0L-tYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k4L-DU-nRw"/>
                         </constraints>
@@ -181,7 +181,7 @@
                         <outlet property="appearanceSwitch" destination="c9f-9b-EBa" id="onC-9x-aLO"/>
                         <outlet property="formView" destination="TlU-X9-dM2" id="SYW-Qz-WeZ"/>
                         <outlet property="headerView" destination="oGW-HU-3hp" id="uWp-ll-KfE"/>
-                        <outlet property="stackViewCenterConstraint" destination="TDm-9q-8FH" id="9D2-sB-CPe"/>
+                        <outlet property="stackViewCenterConstraint" destination="1KQ-9L-wUd" id="Wfd-kH-Lis"/>
                         <segue destination="KqR-Jk-JGJ" kind="show" identifier="PlaylistViewController" id="Cx7-p1-aTU"/>
                         <segue destination="baF-fC-YCb" kind="presentation" identifier="PolicyViewController" id="ryo-v2-D9D"/>
                     </connections>
